documentation/deployment-guides/azure-managed/kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erpnext
  labels:
    name: erpnext
    environment: production
